new projects added

--- a/beginer projects after all the chapter is completed/upgraded blog/templates/contact.html
+++ b/beginer projects after all the chapter is completed/upgraded blog/templates/contact.html
@@ -10,7 +10,11 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>Contact Me</h1>
+                            {% if message: %}
+                                <h1>Successfully send your message</h1>
+                            {% else: %}
+                                <h1>Contact me</h1>
+                            {% endif %}
                             <span class="subheading">Have questions? I have answers.</span>
                         </div>
                     </div>
@@ -31,21 +35,21 @@
                             <!-- To make this form functional, sign up at-->
                             <!-- https://startbootstrap.com/solution/contact-forms-->
                             <!-- to get an API token!-->
-                            <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="/login" method="post">
+                            <form id="contactForm" action="{{ url_for('receive_data') }}" method="post">
                                 <div class="form-floating">
-                                    <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" name="username"/>
+                                    <input class="form-control" id="name" type="text" placeholder="Enter your name..." name="username"/>
                                     <label for="name">Name</label>
                                 </div>
                                 <div class="form-floating">
-                                    <input class="form-control" id="email" type="email" placeholder="Enter your email..." data-sb-validations="required,email" name="email"/>
+                                    <input class="form-control" id="email" type="email" placeholder="Enter your email..." name="email"/>
                                     <label for="email">Email address</label>
                                 </div>
                                 <div class="form-floating">
-                                    <input class="form-control" id="phone" type="tel" placeholder="Enter your phone number..." data-sb-validations="required" name="number"/>
+                                    <input class="form-control" id="phone" type="tel" placeholder="Enter your phone number..." name="number"/>
                                     <label for="phone">Phone Number</label>
                                 </div>
                                 <div class="form-floating">
-                                    <textarea class="form-control" id="message" placeholder="Enter your message here..." style="height: 12rem" data-sb-validations="required" name="message"></textarea>
+                                    <textarea class="form-control" id="message" placeholder="Enter your message here..." style="height: 12rem" name="message"></textarea>
                                     <label for="message">Message</label>
                                 </div>
                                 <br />
